# property_tree

./: .gitignore  CMakeLists.txt  appveyor.yml  build.jam
.github/workflows/: ci.yml
doc/: property_tree.qbk  tutorial.qbk  xml_parser.qbk
examples/: CMakeLists.txt  Jamfile.v2  debug_settings.cpp  info_grammar_spirit.cpp  speed_test.cpp
include/boost/property_tree/: exceptions.hpp  id_translator.hpp  info_parser.hpp  ini_parser.hpp  json_parser.hpp  ptree.hpp  ptree_fwd.hpp  ptree_serialization.hpp  stream_translator.hpp  string_path.hpp  version.hpp  xml_parser.hpp
include/boost/property_tree/detail/: exception_implementation.hpp  file_parser_error.hpp  info_parser_read.hpp  json_parser_read.hpp  json_parser_write.hpp  optional_type.hpp  ptree_implementation.hpp  rapidxml.hpp  versioned_namespace.hpp  xml_parser_flags.hpp  xml_parser_read_rapidxml.hpp  xml_parser_utils.hpp  xml_parser_write.hpp  xml_parser_writer_settings.hpp
include/boost/property_tree/detail/json_parser/: narrow_encoding.hpp  parser.hpp  read.hpp  standard_callbacks.hpp  wide_encoding.hpp
include/boost/property_tree/json_parser/detail/: parser.hpp  read.hpp  standard_callbacks.hpp  write.hpp
include/boost/property_tree/v1/: exceptions.hpp  id_translator.hpp  info_parser.hpp  ini_parser.hpp  json_parser.hpp  ptree.hpp  ptree_fwd.hpp  ptree_serialization.hpp  stream_translator.hpp  string_path.hpp  xml_parser.hpp
include/boost/property_tree/v1/detail/: exception_implementation.hpp  file_parser_error.hpp  info_parser_error.hpp  info_parser_read.hpp  info_parser_utils.hpp  info_parser_write.hpp  info_parser_writer_settings.hpp  json_parser_error.hpp  json_parser_read.hpp  json_parser_write.hpp  ptree_implementation.hpp  ptree_utils.hpp  rapidxml.hpp  xml_parser_error.hpp  xml_parser_flags.hpp  xml_parser_read_rapidxml.hpp  xml_parser_utils.hpp  xml_parser_write.hpp  xml_parser_writer_settings.hpp
include/boost/property_tree/v2/: exceptions.hpp  id_translator.hpp  info_parser.hpp  ini_parser.hpp  json_parser.hpp  ptree.hpp  ptree_fwd.hpp  ptree_serialization.hpp  stream_translator.hpp  string_path.hpp  xml_parser.hpp
include/boost/property_tree/v2/detail/: exception_implementation.hpp  file_parser_error.hpp  info_parser_error.hpp  info_parser_read.hpp  info_parser_utils.hpp  info_parser_write.hpp  info_parser_writer_settings.hpp  json_parser_error.hpp  json_parser_read.hpp  json_parser_write.hpp  ptree_implementation.hpp  ptree_utils.hpp  rapidxml.hpp  xml_parser_error.hpp  xml_parser_flags.hpp  xml_parser_read_rapidxml.hpp  xml_parser_utils.hpp  xml_parser_write.hpp  xml_parser_writer_settings.hpp
meta/: libraries.json
test/: CMakeLists.txt  Jamfile.v2  prefixing_callbacks.hpp  test_info_parser.cpp  test_ini_parser.cpp  test_json_parser.cpp  test_json_parser2.cpp  test_lifecycle.cpp  test_property_tree.cpp  test_property_tree.hpp  test_utils.hpp  test_xml_parser_common.hpp  xml_parser_test_data.hpp
test/custom-build/: tests.sln
